# fs-system

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  =24.3.0  LICENSE  Makefile  README.md  initialize_project.sh  requirements.txt
dependencies/eufs_msgs/: .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  package.xml
dependencies/eufs_msgs/msg/: CanState.msg  ConeWithCovariance.msg  Costmap.msg  Heartbeat.msg  LapStats.msg  NodeState.msg  NodeStateArray.msg  PathIntegralParams.msg  PointArray.msg  VehicleCommandsStamped.msg  Waypoint.msg
dependencies/eufs_msgs/srv/: Register.srv  SetCanState.srv
dependencies/tf_helper/: CMakeLists.txt  README.md  package.xml  setup.py
dependencies/tf_helper/nodes/: lidar_orient.py
dependencies/tf_helper/tests/: StatusPublisher_test.py
dependencies/tf_helper/tf_helper/: TFHelper.py  TFHelperTest.py
dependencies/zed_opencv/: CMakeLists.txt  package.xml
dependencies/zed_opencv/launch/: zed_opencv.launch
dependencies/zed_opencv/nodes/: zed_opencv_node.py
navigation/centerline_calc/: CMakeLists.txt  package.xml  setup.py
navigation/centerline_calc/launch/: center.launch
navigation/centerline_calc/nodes/: node.py
navigation/centerline_calc/testing/: lowerBound.npy  upperBound.npy
navigation/lqr/: CMakeLists.txt  package.xml  setup.py
navigation/lqr/launch/: lqr.launch  lqr_params.launch
navigation/lqr/nodes/: lqr_node.py
navigation/lqr/tests/: lqrCreateRaceline_test.py  lqrOptimizeTrack_test.py  lqrPrepareTrack_test.py
navigation/pure_pursuit/: CMakeLists.txt  package.xml  setup.py
navigation/pure_pursuit/launch/: launcher.launch  parameters.launch  parameters.yaml  test.test  tf_test.launch
navigation/pure_pursuit/nodes/: purepursuit_node.py
navigation/pure_pursuit/testing/: dataVisualization.py  distanceErrorCalc.py  pathMsgTesting.py  purePursuitController_test.py  purepursuitNodeTest.py  randomWaypointsGen.py  statepublisher.py  targetIndex_test.py
navigation/pure_pursuit/tests/: pid_controller_test.py  purePursuit_test.py
navigation/simple_pure_pursuit/: CMakeLists.txt  package.xml  setup.py
navigation/simple_pure_pursuit/config/: simplepurepuirsuit_parameters.yaml
navigation/simple_pure_pursuit/launch/: launch.launch  parameters.launch  simplePurePursuit.launch.py  tf_launcher.launch
navigation/simple_pure_pursuit/nodes/: simple_pp_node.py
navigation/simple_pure_pursuit/scripts/: simple_pp_node.py  simple_pure_pursuit.py  simple_pure_pursuitController.py  simple_purepursuitcontroller.py  waypoints_node.py
navigation/simple_pure_pursuit/simple_pure_pursuit/: __init__.py  simple_pp_node.py  simple_pure_pursuit.py  simple_purepursuitcontroller.py  waypoints_node.py
navigation/simple_pure_pursuit/simple_pure_pursuit (1)/: __init__.py  simple_pp_node.py
perception/moreo/: CMakeLists.txt  package.xml  setup.cfg  setup.py
perception/moreo/distributed_fex/: DistributedMoreo2.py
perception/moreo/launch/: moreo_launch.launch.xml  moreo_sys.launch
perception/moreo/moreo/: kpr_node.py  moreo_logic.py  moreo_node.py  resnet.py
perception/moreo/nodes/: moreo_system.py
perception/moreo/src/: DistributedFex.py  moreo_system.py
perception/moreo/tests/: distribtuedFex_test.py  postprocessing_test.py
perception/mrpython-pcl/: CMakeLists.txt  README.md  package.xml  setup.py
perception/mrpython-pcl/launch/: lidar.launch  lidar.test  lidar_params.launch
perception/mrpython-pcl/nodes/: lidar.py
perception/mrpython-pcl/rostests/: FullPipeline_test.py
perception/mrpython-pcl/testing/: ConeClassifierParamTuner.py  pointcloud_1.npy  pointcloud_1_gt.npy
perception/mrpython-pcl/tests/: AdaptiveGroundRemoval_test.py  Builders_test.py  ConeClassifier_test.py  Filter_test.py  LidarPipeline_test.py  MeanClusterer_test.py  (+3 more)
perception/mrpython_pcl/: CMakeLists.txt  lidar.rviz  package.xml  setup.cfg  setup.py
perception/smoreo/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
perception/smornn/: CMakeLists.txt  package.xml  setup.cfg  setup.py
perception/zed/: CMakeLists.txt  README.md  package.xml  setup.py
planning/acceleration/: CMakeLists.txt  package.xml  setup.py
planning/planning_acceleration/: package.xml  setup.cfg  setup.py
planning/planning_apf/: CMakeLists.txt  package.xml  setup.py
planning/planning_trees/: CMakeLists.txt  README.md  package.xml
planning/skidpad_acceleration/: CMakeLists.txt  package.xml  setup.py
planning/waypoint_cleaner/: CMakeLists.txt  package.xml  setup.py
supervisor/: CMakeLists.txt  package.xml  setup.py
supervisor/GUI/: interface.py
supervisor/config/: autoDemo_params.yaml  staticA_params.yaml  staticB_params.yaml  supervisor_params.yaml
supervisor/configs/: Trackdrive.json  acceleration.json  autoDemo.json  autocross.json  modules.json  skidpad.json  staticA.json  staticB.json
supervisor/json/: Trackdrive.json  autoDemo.json  autocross.json  staticA.json  staticB.json  testConfig.json
supervisor/launch/: autoDemo.launch  autoDemo_launch.py  autoDemo_launch.yaml  autocross.launch  frames.launch  frames_ipg.launch  staticA.launch  staticA_launch.py  staticA_launch.yaml  staticB.launch  staticB_launch.py  staticB_launch.yaml  supervisor.launch  supervisor_launch.py  supervisor_launch.yaml  system.launch  trackDrive.launch
supervisor/mission_commander/: CMakeLists.txt  package.xml  setup.py
supervisor/nodes/: autocross.py  autonomous_demo.py  mesh_viz.py  ros_can_simulator.py  staticA.json  staticA.py  staticB.py  supervisor_node.py  track_drive.py
supervisor/rviz/: run_rviz.sh  run_supervisor_rviz.sh  supervisor.rviz  system.rviz
supervisor/supervisor/: CMakeLists.txt  launcher.py  staticA.py  staticB.py  test.json  test.py  testCanState.py  testModule.py  testVcmd.py  testWspeeds.py  test_interval.py
supervisor/testing/: main.py
supervisor/tests-launch/: test_mission_launcher.test  test_module.test  test_visualizer.test
supervisor/tests-node/: mission_launcher_test_node.py  placeholder_test_node.py  visualizer_test_node.py
supervisor/tests-unit/: test_module.py  test_visualizer.py
(+1185 files in other folders)
