<?xml version="1.0"?>
<package format="2">
  <name>tf_helper</name>
  <version>1.0.0</version>
  <description>The tf_helper package</description>

  <maintainer email="asurt.fsai@gmail.com">ASU Racing Team, Formula AI Team</maintainer>


  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
