<?xml version="1.0"?>
<package format="2">
  <name>lqr</name>
  <version>1.0.0</version>
  <description>Calculates optimal racing line of a given track</description>

  <maintainer email="asurt.fsai@gmail.com">ASU Racing Team, Formula AI Team</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>ros_numpy</build_depend>
  <build_depend>geometry_msgs</build_depend>


  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>ros_numpy</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>ros_numpy</exec_depend>


  <export>
  </export>

</package>
