<?xml version="1.0"?>
<package format="2">
  <name>mrpython_pcl</name>
  <version>1.0.0</version>
  <description>Main pipeline using a lidar to detect cone locations</description>

  <maintainer email="asurt.fsai@gmail.com">ASU Racing Team, Formula AI Team</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>asurt_msgs</build_depend>
  <build_depend>ros_numpy</build_depend>
  <build_depend>tf_helper</build_depend>

  <build_export_depend>pcl_conversions</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>asurt_msgs</build_export_depend>
  <build_export_depend>ros_numpy</build_export_depend>

  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>asurt_msgs</exec_depend>
  <exec_depend>ros_numpy</exec_depend>
  <exec_depend>tf_helper</exec_depend>


  <export>
  </export>

</package>
