<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mrpython_pcl</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="farida@todo.todo">farida</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <build_depend>tf_helper</build_depend>
  <build_export_depend>tf_helper</build_export_depend>
  <exec_depend>tf_helper</exec_depend>
  <build_depend>asurt_msgs</build_depend>
  <exec_depend>asurt_msgs</exec_depend>
  <build_export_depend>asurt_msgs</build_export_depend>
  <exec_depend>common_params</exec_depend>
  <build_depend>common_params</build_depend>
  <build_export_depend>common_params</build_export_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
