<?xml version="1.0"?>
<package format="2">
  <name>smoreo</name>
  <version>0.0.0</version>
  <description>The smoreo package used for monocular camera detection of cones</description>

  <maintainer email="mosameh@todo.todo">mosameh</maintainer>


  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msg</build_depend>
  <build_depend>darknet_ros_msgs</build_depend>
  <build_depend>asurt_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>tf_helper</exec_depend>


</package>
