<?xml version="1.0"?>
<package format="2">
  <name>smornn</name>
  <version>1.0.0</version>
  <description>Module to combine the detections of the lidar pipeline and smoreo</description>

  <maintainer email="asurt.fsai@gmail.com">ASU Racing Team, Formula AI Team</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>asurt_msgs</build_depend>
  <build_depend>tf_helper</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>asurt_msgs</build_export_depend>
  <build_export_depend>tf_helper</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>asurt_msgs</exec_depend>
  <exec_depend>tf_helper</exec_depend>


  <export>
  </export>
</package>
