<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>smornn</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mohammed.alaa200080@gmail.com">mohamedalaa</maintainer>
  <license>TODO: License declaration</license>

  <build_depend>rclpy</build_depend>
  <build_depend>asurt_msgs</build_depend>
  <build_depend>tf_helper</build_depend>
  <build_depend>ros2_numpy</build_depend>

  <build_export_depend>rclpy</build_export_depend>
  <build_export_depend>asurt_msgs</build_export_depend>
  <build_export_depend>tf_helper</build_export_depend>
  <build_export_depend>ros2_numpy</build_export_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>asurt_msgs</exec_depend>
  <exec_depend>tf_helper</exec_depend>
  <exec_depend>ros2_numpy</exec_depend>



  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
