<?xml version="1.0"?>
<package format="2">
  <name>zed</name>
  <version>0.0.0</version>
  <description>The zed package</description>

  <maintainer email="mosameh@todo.todo">mosameh</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf_helper</build_depend>
  <build_depend>darknet_ros</build_depend>
  <build_depend>asurt_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>stereo_msgs</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf_helper</build_export_depend>
  <build_export_depend>darknet_ros</build_export_depend>
  <build_export_depend>asurt_msgs</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <build_export_depend>stereo_msgs</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf_helper</exec_depend>
  <exec_depend>darknet_ros</exec_depend>
  <exec_depend>asurt_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>stereo_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
